#167 Fix Base64Writer
 Now using java.util.Base64 as Encoder and Decoder

 TODO: Fix Decoder and Reader class.

 <feature