@@ -1,9 +1,9 @@
 package nl.tudelft.ti2206.group9.util;
 
-import sun.misc.BASE64Encoder;
-
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.io.Writer;
+import java.util.Base64;
 
 /**
  * This Writer decorates a Writer by encrypting files with Base64.
@@ -15,21 +15,36 @@ public class Base64Writer extends Writer {
     /** The Writer to be decorated with this Base64Writer. */
     private Writer writer;
     /** The Base64 encoder. */
-    private BASE64Encoder encoder = new BASE64Encoder();
+    private Base64.Encoder encoder = Base64.getEncoder();
 
     /** Constructor which sets the Writer to be decorated. */
     public Base64Writer(Writer wrtr) {
         writer = wrtr;
     }
 
+    /**
+     * Write an entire encoded String.
+     * @param input the String to be encoded and written
+     */
+    public void writeString(String input) {
+        try {
+            String encodedInput = encoder.encodeToString(input.getBytes("UTF-8"));
+            writer.write(encodedInput);
+        } catch (UnsupportedEncodingException e) {
+            GameObservable.OBSERVABLE.notify(GameObserver.Category.ERROR,
+                    GameObserver.Error.UNSUPPORTEDENCODINGEXCEPTION,
+                    "Base64Writer.writeString()", e.getMessage());
+        } catch (IOException e) {
+            GameObservable.OBSERVABLE.notify(GameObserver.Category.ERROR,
+                    GameObserver.Error.IOEXCEPTION,
+                    "Bas64Writer.writeString(String)", e.getMessage());
+        }
+    }
+
     @Override
     public void write(char[] cbuf, int off, int len) throws IOException {
-        byte[] encodedBytes = encoder.encode(new String(cbuf)
-                .getBytes("UTF-8")).getBytes();
-        char[] encodedCbuf = new char[encodedBytes.length - 1];
-        for (int i = 0; i < encodedCbuf.length; i++) {
-            encodedCbuf[i] = (char) encodedBytes[i];
-        }
+        byte[] bytes = new String(cbuf).getBytes("UTF-8");
+        String encodedCbuf = encoder.encodeToString(bytes);
         writer.write(encodedCbuf, off, len);
     }
 
